# parse_bitcoin

./: Cargo.toml  LICENSE
src/: generate_input_tests.sh  generate_output_tests.sh  generate_tx_tests.sh  generate_witnesses.tests.sh  how_to_test_files  lib.rs  main.rs  parser.rs  tx_640d0279609c9047ebbffb1d0dcf78cbbe2ae12cadd41a28377e1a259ebf5b89.hex  tx_640d0279609c9047ebbffb1d0dcf78cbbe2ae12cadd41a28377e1a259ebf5b89.input.hex  tx_640d0279609c9047ebbffb1d0dcf78cbbe2ae12cadd41a28377e1a259ebf5b89.output.hex  tx_640d0279609c9047ebbffb1d0dcf78cbbe2ae12cadd41a28377e1a259ebf5b89.rpc  tx_640d0279609c9047ebbffb1d0dcf78cbbe2ae12cadd41a28377e1a259ebf5b89.witnesses.hex  tx_de06af29a80be52bb5f4b6c86998dcfdf0f9e7f66a1ebb7e9d20d65cc6785d8c.native_witness.hex  tx_de06af29a80be52bb5f4b6c86998dcfdf0f9e7f66a1ebb7e9d20d65cc6785d8c.native_witness.rpc  tx_fb042de1f26d3ea4df6a5d7c7b8bb3463d49ac32400df4b881ad87d922a6be54.segwit.hex  tx_fb042de1f26d3ea4df6a5d7c7b8bb3463d49ac32400df4b881ad87d922a6be54.segwit.rpc
src/parsers/: mod.rs  parse_block.rs  parse_block_header.rs  parse_magic_number.rs  parse_transaction.rs  parse_tx_inputs.rs  parse_tx_outputs.rs  parse_var_int.rs  parse_witnesses.rs
src/test_data/: blk_0000000000000000000215160a3490f82c7203d9683802148a56282d1f80993d.hex  blk_0000000000000000000215160a3490f82c7203d9683802148a56282d1f80993d.rpc  blk_0000000000000000000b0a682f47f187a712c42badd4ca1989c494d401457c3f.hex  blk_0000000000000000000b0a682f47f187a712c42badd4ca1989c494d401457c3f.rpc  blk_000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f.rpc  (+9 more)
src/types/: mod.rs  (+11 more)
(+10 files in other folders)
