[package]
name = "parse_bitcoin"
version = "0.1.0"
authors = ["Tomas Kanocz <tomas.kanocz@cnl.sk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom="5"
chrono="0.4"
ring="0.16.9"
partial_application="0.2.0"
displaydoc = { version = "0.1.6", optional = true }

[dev-dependencies]
hex="0.4.0"
